--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,7 @@
   margin-left: 545px;
   margin-top: -200px;
   font-size: 45px;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .lets {
@@ -89,6 +90,7 @@
   margin-top: 80px;
   margin-left: -148px;
   color: white;
+  font-size: 15px;
 }
 
 .prev,
@@ -144,7 +146,7 @@
   font-weight: 500;
   background-color: rgba(173, 216, 230, 0.322);
   width: 55%;
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
 .container_2 {
@@ -181,6 +183,7 @@
   text-align: center;
   vertical-align: middle;
   line-height: 200px;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .grid-item,
@@ -194,6 +197,9 @@
 }
 .item {
   border: 3px solid black;
+  border-radius: 55%;
+  box-shadow: 0 8px 8px 0 rgba(61, 59, 59, 0.514),
+    0 8px 8px 0 rgba(71, 69, 69, 0.692);
 }
 
 .review {
@@ -248,6 +254,7 @@
 
 .client {
   font-family: inherit;
+  text-shadow: 2px 2px 4px #000000;
 }
 .client_so {
   text-align: center;
@@ -312,7 +319,7 @@ input[type="submit"]:hover {
 
 form {
   background-image: url("https://wallpapercave.com/wp/wp2815529.jpg");
-  height: 750px;
+  height: auto;
   background-color: rgba(133, 107, 107, 0.281);
   color: white;
   font-style: italic;
@@ -325,7 +332,7 @@ form {
   color: white;
   float: left;
   margin-left: 1150px;
-  margin-top: -750px;
+  margin-top: -580px;
   position: relative;
 }
 .insta,
@@ -351,7 +358,7 @@ form {
   color: white;
   position: relative;
   margin-left: 535px;
-  margin-top: -760px;
+  margin-top: -580px;
   float: left;
 }
 
@@ -374,21 +381,22 @@ form {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: #05050598;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.452);
   z-index: 1;
 }
 
 .dropdown-content a {
-  color: black;
+  color: rgb(255, 255, 255);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  font-size: 20px;
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: teal;
 }
 
 .dropdown:hover .dropdown-content {
@@ -417,6 +425,8 @@ form {
   animation-name: example;
   animation-duration: 2s;
   margin-top: 40px;
+  list-style-image: url("./images/bullet.gif");
+  width: auto !important;
 }
 
 .summary,
@@ -455,7 +465,7 @@ form {
 
 .mac_grid2 {
   margin-top: 55px;
-  margin-left: 480px;
+  margin-right: 20px;
 }
 
 .blast {
@@ -463,8 +473,8 @@ form {
   margin: 38px 3px 3px 3px;
   height: 500px;
   background-color: rgba(222, 184, 135, 0.829);
-  width: 900px;
-  margin-left: 600px;
+  width: 1000px;
+  margin-left: 520px;
 }
 
 .summary2 {
@@ -475,12 +485,14 @@ form {
   position: relative;
   animation-name: example2;
   animation-duration: 6s;
-  margin-top: 40px;
-  margin-left: -1330px;
+  margin-top: 20px;
+  margin-right: 20px;
+  list-style-image: url("./images/bullet.gif");
+  width: auto !important;
 }
 
 .freezer {
-  margin-left: -610px;
+  margin-left: 280px;
 }
 
 @keyframes example2 {
@@ -534,6 +546,7 @@ form {
   vertical-align: middle;
   line-height: 200px;
   font-size: 70px;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 @keyframes example3 {
@@ -553,4 +566,8 @@ form {
     left: 0px;
     top: 0px;
   }
+}
+
+.form {
+  padding: 170px;
 }
