--- a/src/style.css
+++ b/src/style.css
@@ -8,12 +8,14 @@
   position: sticky;
   top: 0;
   z-index: 1020;
+  width: 99.7%;
 }
 
 .flex_container {
   display: flex;
   margin: 53px 45px 0px 0px;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .nav_i {
@@ -63,11 +65,13 @@
   position: relative;
   width: 450px;
   height: 130px;
-  text-align: center;
+  padding-left: 30px;
   border-radius: 35px;
   margin: -200px 0px 0px 545px;
   font-size: 45px;
   text-shadow: 2px 2px 4px #000000;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .lets {
@@ -111,6 +115,8 @@
 .container {
   position: sticky;
   top: -13%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .prev {
@@ -126,11 +132,13 @@
 }
 
 .about {
-  text-align: center;
-  margin-top: 80px;
+  margin-top: 24px;
   font-size: 36px;
   font-family: inherit, sans-serif;
-  background-color: rgba(182, 227, 241, 0.623);
+  background-color: rgba(21, 89, 110, 0.623);
+  flex-wrap: wrap;
+  padding-left: 570px;
+  width: 99.8%;
 }
 
 .about_p,
@@ -140,9 +148,11 @@
   font-size: 18px;
   box-sizing: border-box;
   font-weight: 500;
-  background-color: rgba(173, 216, 230, 0.322);
+  background-color: rgba(102, 187, 187, 0.493);
   width: 55%;
   border-radius: 15px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .container_2 {
@@ -164,10 +174,13 @@
   margin-top: -645px;
 }
 .machine {
+  display: flex;
+  grid-template-columns: auto;
   background-color: rgb(167, 229, 231);
   width: 1520px;
-  height: 1080px;
+  height: 100%;
   margin-top: -120px;
+  flex-wrap: wrap;
 }
 .tool {
   height: 200px;
@@ -180,6 +193,9 @@
   vertical-align: middle;
   line-height: 200px;
   text-shadow: 2px 2px 4px #000000;
+  padding-left: 580px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .grid-item,
@@ -196,16 +212,19 @@
   border-radius: 55%;
   box-shadow: 0 8px 8px 0 rgba(61, 59, 59, 0.514),
     0 8px 8px 0 rgba(71, 69, 69, 0.692);
+  flex-wrap: wrap;
 }
 
 .review {
   background-image: url("https://designshack.net/wp-content/uploads/black-texture-background.jpg");
-  margin-top: -45px;
+  margin-top: -25px;
   text-align: center;
   background-color: rgb(191, 161, 219);
   position: relative;
   color: white;
   height: 270px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .rev {
@@ -251,6 +270,7 @@
 .client {
   font-family: inherit;
   text-shadow: 2px 2px 4px #000000;
+  padding-left: 550px;
 }
 .client_so {
   text-align: center;
@@ -267,7 +287,7 @@
 }
 
 input[type="text"] {
-  width: 20%;
+  width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   display: block;
@@ -315,20 +335,24 @@ input[type="submit"]:hover {
 
 form {
   background-image: url("https://wallpapercave.com/wp/wp2815529.jpg");
-  height: auto;
   background-color: rgba(133, 107, 107, 0.281);
   color: white;
   font-style: italic;
-  padding: 10px 0px 0px 20px;
   position: relative;
-  margin-top: -1px;
+  width: 246px;
+  padding-top: 15px !important;
+  height: 350px;
+  margin-top: -8px;
+  padding: 170px;
+  border: 1px solid;
 }
 
 .contact2 {
   color: white;
   float: left;
-  margin-left: 1150px;
-  margin-top: -580px;
+  /* margin-left: 1150px;
+  margin-top: -580px; */
+  width: 300px;
   position: relative;
 }
 .insta,
@@ -337,6 +361,7 @@ form {
 .phone {
   display: flex;
   padding: 15px 5px 5px 5px;
+  font-size: 14px;
 }
 .phone {
   margin-left: -10px;
@@ -353,9 +378,12 @@ form {
 .office {
   color: white;
   position: relative;
-  margin-left: 535px;
-  margin-top: -580px;
+  /* margin-left: 535px;
+  margin-top: -580px; */
   float: left;
+  margin-top: -580px;
+  margin-left: 1000px;
+  flex-wrap: wrap;
 }
 
 .map:hover {
@@ -368,10 +396,10 @@ form {
   color: rgb(218, 211, 211);
   position: relative;
   float: left;
-  margin-top: -74px;
-  min-width: 99.8%;
+  width: 99.7%;
   min-height: 70px;
   border: 1px solid black;
+  height: 50px;
 }
 
 .dropdown-content {
@@ -410,6 +438,14 @@ form {
   margin: 38px 3px 3px 3px;
   margin-top: 120px;
   height: 500px;
+  flex-wrap: wrap;
+}
+
+.flex1 {
+  margin-top: -475px;
+  margin-left: 434px;
+  flex-wrap: wrap;
+  display: flex;
 }
 
 .summary {
@@ -425,9 +461,7 @@ form {
   width: auto !important;
 }
 
-.summary,
-.warehouse,
-.summary2 {
+.warehouse {
   background-color: rgba(222, 184, 135, 0.829);
   width: 900px;
 }
@@ -438,22 +472,18 @@ form {
 
 @keyframes example {
   0% {
-    background-color: rgba(222, 184, 135, 0.829);
     left: 2000px;
     top: 0px;
   }
   50% {
-    background-color: rgba(222, 184, 135, 0.829);
     left: 0px;
     top: 0px;
   }
   75% {
-    background-color: rgba(222, 184, 135, 0.829);
     left: 0px;
     top: 0px;
   }
   100% {
-    background-color: rgba(222, 184, 135, 0.829);
     left: 0px;
     top: 0px;
   }
@@ -493,34 +523,32 @@ form {
 
 @keyframes example2 {
   0% {
-    background-color: rgba(222, 184, 135, 0.829);
     right: 2000px;
     top: 0px;
   }
   50% {
-    background-color: rgba(222, 184, 135, 0.829);
     right: 0px;
     top: 0px;
   }
   75% {
-    background-color: rgba(222, 184, 135, 0.829);
     right: 0px;
     top: 0px;
   }
   100% {
-    background-color: rgba(222, 184, 135, 0.829);
     right: 0px;
     top: 0px;
   }
 }
 
 .ware_cont {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   width: fit-content;
   grid-template-columns: auto auto;
   position: relative;
   background-color: rgba(0, 0, 0, 0.253);
-  margin: -50px 0px 0px 30px;
+  margin: 5px 0px 0px 5px;
+  padding-left: 10px;
   animation-name: example3;
   animation-duration: 6s;
 }
@@ -564,6 +592,44 @@ form {
   }
 }
 
-.form {
-  padding: 170px;
+.mySlides {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main_about {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.grid_contact {
+  display: inline-flex;
+  grid-template-columns: auto auto auto;
+  position: relative;
+  padding: 10px;
+  background-color: rgb(63, 76, 83);
+  flex-wrap: wrap;
+  width: 1498px;
+}
+
+.grid_item {
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+.query,
+.info,
+.reach {
+  font-size: 25px;
+}
+.tag {
+  font-weight: 700;
+}
+
+.ware_head {
+  height: 204px;
+  display: flex;
+  flex-wrap: wrap;
 }
