--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,6 @@
   background-color: rgb(148, 201, 236);
 } */
 .App {
-  height: 115px;
   background-color: rgb(8, 85, 85);
   border: 2px solid black;
   display: flex;
@@ -19,6 +18,15 @@
   margin: 53px 45px 0px 0px;
   justify-content: space-evenly;
   flex-wrap: wrap;
+}
+
+@media screen and (max-width: 700px) {
+  .flex_container,
+  .App,
+  .head,
+  .activity {
+    flex-direction: column;
+  }
 }
 
 .nav_i {
@@ -75,7 +83,7 @@
   font-size: 45px;
   text-shadow: 2px 2px 4px #000000;
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 }
 
 .lets {
@@ -148,7 +156,7 @@
 .about_p,
 .activity_p {
   text-align: left;
-  margin-left: 330px;
+  margin-left: 22%;
   font-size: 18px;
   box-sizing: border-box;
   font-weight: 500;
@@ -165,10 +173,12 @@
 .activity {
   position: absolute;
   background-color: rgba(173, 216, 230, 0.884);
-  margin-top: -935px;
-  min-width: 1519px;
-  min-height: 932px;
+  margin-top: -61.5%;
+  min-height: 98%;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .grid-container {
@@ -638,10 +648,10 @@ label {
 }
 
 .login {
-  display: grid;
+  display: flex;
   grid-template-columns: auto;
   padding: 10px;
-  margin-left: 500px;
+  margin-left: 30%;
   margin-top: 160px;
   width: 36%;
   background-color: #85e094e7;
@@ -652,9 +662,18 @@ label {
   box-shadow: 0 8px 8px 0 rgba(61, 59, 59, 0.514),
     0 8px 8px 0 rgba(71, 69, 69, 0.692);
 }
+@media screen and (max-width: 700px) {
+  .login {
+    height: 230px;
+  }
+  .enter {
+    font-size: 3em;
+  }
+}
+
 .log_field {
-  padding: 12px 20px;
-  margin: 8px 0;
+  padding: 5% 10%;
+  margin: 2% 0%;
   display: block;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 4px;
@@ -662,7 +681,7 @@ label {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-weight: 500;
-  height: 54px;
+  height: 10%;
   width: 100%;
   border-radius: 40px;
   font-size: larger;
@@ -684,6 +703,8 @@ label {
 }
 
 .log_main {
+  display: flex;
+  flex-wrap: wrap;
   min-height: 100%;
   min-width: 100%;
   position: absolute;
@@ -691,13 +712,13 @@ label {
 }
 
 .enter {
-  margin-left: 215px;
-  margin-top: 45px;
+  margin-left: 40%;
+  margin-top: 15%;
   font-size: 40px;
 }
 
 .power {
-  margin-left: 138px;
+  margin-left: 25%;
   margin-top: -60px;
 }
 
