--- a/src/style.css
+++ b/src/style.css
@@ -20,19 +20,47 @@
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
   .flex_container,
   .App,
-  .head,
   .activity {
-    flex-direction: column;
+    flex-direction: row;
+    height: auto;
+  }
+
+  .head {
+    font-size: 2rem !important;
+    margin-top: -60% !important;
+  }
+
+  .nav_i {
+    margin: 2px 2px 2px 2px !important;
+    font-size: 1rem !important;
+    height: 3rem !important;
+  }
+  .flex_container {
+    margin-top: 5px !important;
+  }
+  .about {
+    font-size: 2rem !important;
+    padding-left: 20% !important;
+  }
+  .about_p {
+    width: 70% !important;
+    margin-left: 17% !important;
+  }
+  .activity_p {
+    margin-left: 0% !important;
+    /* font-size: 1rem !important; */
+    height: fit-content !important;
+    width: 30% !important;
   }
 }
 
 .nav_i {
   color: rgb(255, 248, 248);
   font-family: serif;
-  font-size: 22px;
+  font-size: 1.5rem;
   padding: 13px 13px 13px 13px;
 }
 
@@ -42,7 +70,7 @@
 .gallery,
 .log {
   background-color: rgb(47, 47, 56);
-  height: 47px;
+  height: 70%;
   margin: 5px 5px 5px 5px;
   border-radius: 5px;
   text-decoration: none;
@@ -75,12 +103,12 @@
   font-weight: bolder;
   background-color: rgba(0, 0, 0, 0.575);
   position: relative;
-  width: 450px;
-  height: 130px;
+  width: 30%;
+  height: 30%;
   padding-left: 30px;
   border-radius: 35px;
-  margin: -200px 0px 0px 545px;
-  font-size: 45px;
+  margin: -20% 0px 0px 35%;
+  font-size: 3rem;
   text-shadow: 2px 2px 4px #000000;
   display: flex;
   flex-wrap: wrap;
@@ -144,12 +172,12 @@
 }
 
 .about {
-  margin-top: 24px;
-  font-size: 36px;
+  margin-top: 2%;
+  font-size: 2.3rem;
   font-family: inherit, sans-serif;
   background-color: rgba(21, 89, 110, 0.623);
   flex-wrap: wrap;
-  padding-left: 570px;
+  padding-left: 38%;
   width: 99.8%;
 }
 
@@ -157,7 +185,7 @@
 .activity_p {
   text-align: left;
   margin-left: 22%;
-  font-size: 18px;
+  font-size: 1.2rem;
   box-sizing: border-box;
   font-weight: 500;
   background-color: rgba(102, 187, 187, 0.493);
